@@ -1,3 +1,11 @@
+2004-01-23  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ogg/gstoggdemux.c:
+	  Fix wrong file comment.
+	* gst-libs/gst/riff/riff-read.c: (gst_riff_read_info):
+	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_header):
+	  Add metadata reading properly.
+
 2004-01-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* ext/Makefile.am:
